--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-.popup-container {
+.popupr-container {
   position: fixed;
   top: 48px;
   right: 16px;
@@ -8,7 +8,7 @@
   z-index: 9999;
 }
 
-.popup-messages {
+.popupr-messages {
   position: absolute;
   left: 0;
   right: 0;
@@ -20,57 +20,67 @@
   gap: 8px;
 }
 
-
-.popup-message {
+.popupr-message {
   --tw-space-x-reverse: 0;
   --tw-backdrop-blur: blur(8px);
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+    0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+    0 4px 6px -4px var(--tw-shadow-color);
   width: 100%;
   margin-bottom: 4px;
   display: flex;
   margin-right: calc(0.75rem var(--tw-space-x-reverse));
   margin-left: calc(0.75rem calc(1 - var(--tw-space-x-reverse)));
   background-color: rgb(229 231 235 / 0.75);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
   padding: 12px;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   border-radius: 12px;
   z-index: 50;
   pointer-events: auto;
 }
 
-.popup-message-image {
+.popupr-message-image {
   flex-shrink: 0;
   border-radius: 8px;
 }
 
-.popup-message-image img {
+.popupr-message-image img {
   width: 48px;
   height: 48px;
   object-fit: contain;
   border-radius: 4px;
 }
 
-.popup-message-content {
+.popupr-message-content {
   width: 100%;
   margin-left: 12px;
 }
 
-.popup-message-content h2 {
+.popupr-message-content h2 {
   font-weight: 600;
   color: #030712;
 }
 
-.popup-message-content p {
+.popupr-message-content p {
   font-size: 15px;
   font-weight: 400;
   color: #374151;
   line-height: 1.25;
 }
 
-.popup-times p {
+.popupr-times p {
   font-size: 15px;
   line-height: 20px;
   color: #4b5563;
@@ -109,16 +119,16 @@
 }
 
 @media (min-width: 768px) {
-  .popup-container {
+  .popupr-container {
     left: 48px;
     right: 48px;
   }
 
-  .popup-messages {
+  .popupr-messages {
     bottom: auto;
   }
 
-  .popup-message {
+  .popupr-message {
     width: 350px;
   }
 }
